# Electrostatic_Particle_Simulation

./: CMakeLists.txt  README.md  main.cpp
Distributed/: Parallel.cpp  Parallel.h
Leader/: Leader.cpp  Leader.h
Particle/: Particle.cpp  Particle.h  ParticleReader.cpp  ParticleReader.h
Sequential/: Sequential.cpp  Sequential.h
hist_data/: output_parallel_5.csv  output_parallel_50.csv  output_parallel_mape.py
hist_data/cr/: output_parallel_cr_comparison.py
hist_data/mode_2_threads_compare/: threads_compare.py
hist_data/mode_3/: comparison_of_total_computation.py  leader_process_executions.py  nParticleSim
